--- a/src/app/poste-insta/poste-insta.component.scss
+++ b/src/app/poste-insta/poste-insta.component.scss
@@ -56,7 +56,7 @@
 
   .post-insta-btn-container {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
     margin-top: -52px;
     margin-right: 7px;
@@ -158,7 +158,3 @@
     margin-top: 0;
   }
 }
-
-
-
-
