--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -36,7 +36,7 @@ nav {
 
     .nav-link {
       display: flex;
-      justify-content: start;
+      justify-content: flex-start;
       align-items: center;
       padding: 5px 15px;
       border-radius: 20px;
