--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -9,6 +9,7 @@ footer {
   justify-content: center;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.12) 0 0 10px 0;
+  animation: slideUp 0.5s ease-in-out;
 
   img {
     border-radius: 50%;
