--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -8,11 +8,10 @@ nav {
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.07);
-  backdrop-filter: blur(10px);
   list-style: none;
   justify-content: space-around;
   flex-direction: column;
-  animation: slideToRight 0.8s ease-out;
+  animation: SlideToRight 0.8s ease-out;
 
   .logo-container {
     width: 100%;
@@ -34,6 +33,18 @@ nav {
     height: 100%;
     width: 100%;
 
+    // Nombre de liens (nav-link) dans le menu (nav-container)
+    $nav-link-count: 6;
+    $delay: 0.05s;
+
+    // Ajoute un delay à chaque lien
+    @for $i from 1 through $nav-link-count {
+      $selector: ".nav-link:nth-of-type(#{$i})";
+      #{$selector} {
+        animation: SlideToRight 0.8s ease-out ($i * $delay) forwards;
+      }
+    }
+
     .nav-link {
       display: flex;
       justify-content: flex-start;
@@ -46,6 +57,7 @@ nav {
       color: #000000;
       text-decoration: none;
       font-size: 16px;
+      opacity: 0;
 
       i {
         margin-right: 20px;
