--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,14 @@
 
 @import "utils";
 
+@keyframes rotateGradient {
+  @for $i from 0 through 360 {
+    #{percentage($i/360)} {
+      background: linear-gradient(#{$i}deg, #f5f7fa, #fff4e7);
+    }
+  }
+}
+
 body {
   font-family: "Roboto", serif;
   font-size: 16px;
@@ -9,4 +17,5 @@ body {
   padding: 0;
   color: black;
   background: linear-gradient(120deg, #f5f7fa, #fff3e5);
+  animation: rotateGradient 10s linear infinite;
 }
