--- a/src/utils.scss
+++ b/src/utils.scss
@@ -3,7 +3,7 @@
 $color-background: #fff;
 
 
-@keyframes slideToRight {
+@keyframes SlideToRight {
   from {
     opacity: 0;
     transform: translate3d(-100%, 0, 0);
@@ -15,16 +15,44 @@ $color-background: #fff;
   }
 }
 
-@keyframes slideToUp {
+@keyframes SlideToUp {
   from {
     opacity: 0;
-    transform: translate3d(0, +100%, 0);
+    transform: translate3d(0, +100%, 0) scale(0.8);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0) scale(1);
   }
 }
 
+@keyframes FadeIn {
+  from {
+    opacity: 0;
+  }
 
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes FadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes ZoomIn {
+  from {
+    transform: scale(0.90);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
