--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,28 @@
 <nav>
   <a class="logo-container" href="/">
-    <img src="assets/logo.png" alt="logo" class="logo"/>
+    <img alt="logo" class="logo" src="assets/logo.png"/>
   </a>
   <div class="nav-container">
-    <a class="nav-link" href=""><i class="bi bi-house"></i> Home</a>
-    <a class="nav-link" href=""><i class="bi bi-search"></i> Search</a>
-    <a class="nav-link" href=""><i class="bi bi-plus-square"></i> Create</a>
-    <a class="nav-link" href=""><i class="bi bi-chat-left-text"></i> Message</a>
-    <a class="nav-link" href=""><i class="bi bi-person-circle"></i> Profile</a>
-    <a class="nav-link" href=""><i class="bi bi-telephone"></i> Contact</a>
+    <div class="nav-link actual">
+      <i class="bi bi-house-fill"></i>
+      <span>Home</span>
+    </div>
+    <div class="nav-link">
+      <i class="bi bi-search"></i>
+      <span>Search</span>
+    </div>
+    <div class="nav-link">
+      <i class="bi bi-plus-square"></i>
+      <span>Create</span>
+    </div>
+    <div class="nav-link">
+      <i class="bi bi-chat-left-text"></i>
+      <span>Message</span>
+      <div class="notification">2</div>
+    </div>
+    <div class="nav-link">
+      <i class="bi bi-person"></i>
+      <span>Profile</span>
+    </div>
   </div>
 </nav>
