--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,14 +3,10 @@ nav {
   padding: 20px 10px;
   z-index: 100;
   position: fixed;
-  display: flex;
-  align-items: center;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.07);
   list-style: none;
-  justify-content: space-around;
-  flex-direction: column;
   animation: SlideToRight 0.8s ease-out;
 
   .logo-container {
@@ -34,7 +30,7 @@ nav {
     width: 100%;
 
     // Nombre de liens (nav-link) dans le menu (nav-container)
-    $nav-link-count: 6;
+    $nav-link-count: 5;
     $delay: 0.05s;
 
     // Ajoute un delay à chaque lien
@@ -49,8 +45,8 @@ nav {
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      padding: 5px 15px;
-      border-radius: 20px;
+      padding: 10px 15px;
+      border-radius: 10px;
       margin: 5px 0;
       height: 30px;
       cursor: pointer;
@@ -58,6 +54,22 @@ nav {
       text-decoration: none;
       font-size: 16px;
       opacity: 0;
+      transition: all 0.3s ease;
+
+      .notification {
+        position: absolute;
+        margin: 0 0 23px 13px;
+        background-color: #ff0000;
+        border-radius: 50%;
+        width: 19px;
+        height: 19px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        border: 2px solid white;
+        font-size: 12px;
+      }
 
       i {
         margin-right: 20px;
@@ -69,8 +81,61 @@ nav {
         background-color: rgba(210, 210, 210, 0.29);
 
         i {
-          font-size: 1.6em;
+          scale: 1.05;
         }
+      }
+
+      &:active {
+        scale: 0.95;
+        background-color: rgba(210, 210, 210, 0.29);
+        -webkit-tap-highlight-color: transparent;
+      }
+    }
+
+    .nav-link.actual {
+      font-weight: 800;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .logo-container {
+    display: none !important;
+  }
+
+  .nav-link {
+    span {
+      display: none;
+    }
+
+    i {
+      margin-right: 0 !important;
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    padding: 10px 0;
+    border-radius: 20px 20px 0 0;
+
+
+    .nav-container {
+      border-radius: 20px;
+      background: #efefef;
+      width: 90% !important;
+      flex-direction: row !important;
+
+      .nav-link {
+        padding: 5px 15px;
       }
     }
   }
