--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,3 +1,3 @@
 <div class="loading">
-  <img src="assets/logo.png" alt="InstaRand" class="loadingLogo"/>
+  <img alt="InstaRand" class="loadingLogo" src="assets/logo.png"/>
 </div>
