--- a/src/app/loading/loading.component.scss
+++ b/src/app/loading/loading.component.scss
@@ -1,13 +1,19 @@
+@import "../../utils";
+@import "../../variables";
+
+
 .loading {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  animation: FadeOut 0.75s ease-in-out;
-  animation-delay: 0.75s;
+  animation: FadeOut $loading-duration/2 ease-in-out;
+  animation-delay: $loading-duration/2;
   animation-fill-mode: forwards;
 
-  .loadingLogo{
-    animation: ZoomIn 1.5s ease-in;
+  .loadingLogo {
+    animation: ZoomIn $loading-duration ease-in;
+    height: auto;
+    width: 100%;
   }
 }
