--- a/src/app/poste-insta/poste-insta.component.scss
+++ b/src/app/poste-insta/poste-insta.component.scss
@@ -81,6 +81,7 @@
     &:active {
       transform: translateY(0);
       background-color: rgba(253, 253, 253, 0.20);
+      -webkit-tap-highlight-color: transparent;
     }
   }
 
@@ -153,5 +154,17 @@
     font-size: 12px;
     color: #999;
     margin-top: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .post-insta {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+
+    .post-insta-image {
+      width: 100%;
+    }
   }
 }
