--- a/src/utils.scss
+++ b/src/utils.scss
@@ -1,7 +1,4 @@
-// All variables are defined here and animations are defined here
-
-$color-background: #fff;
-
+// Animations
 
 @keyframes SlideToRight {
   from {
@@ -48,11 +45,18 @@ $color-background: #fff;
 }
 
 @keyframes ZoomIn {
-  from {
+  0% {
+    opacity: 0.7;
+    filter: blur(5px);
     transform: scale(0.90);
   }
 
-  to {
+  30% {
+    opacity: 1;
+    filter: blur(0);
+  }
+
+  100% {
     transform: scale(1);
   }
 }
