--- a/src/app/stories/stories.component.html
+++ b/src/app/stories/stories.component.html
@@ -1,7 +1,10 @@
 <div class="stories-container">
-  <div class="story" *ngFor="let story of allStories; let index = index" [style.animation-delay]="index*0.5 + 's'">
-    <div class="story-picture-border"></div>
-    <img src="https://picsum.photos/70/70?random={{index}}" alt="story" class="story-picture">
-    <p class="story-name">{{story}}</p>
+  <div class="stories">
+    <div *ngFor="let story of allStories; let index = index" [style.animation-delay]="index*0.5 + 's'" class="story">
+      <div class="story-picture-border"></div>
+      <img alt="story" class="story-picture" src="https://picsum.photos/70/70?random={{index}}">
+      <p class="story-name">{{story}}</p>
+    </div>
   </div>
 </div>
+
