--- a/src/app/stories/stories.component.scss
+++ b/src/app/stories/stories.component.scss
@@ -1,48 +1,57 @@
 .stories-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  padding: 10px 0;
 
-  .story {
+  .stories {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     height: 100%;
     width: 100%;
-    padding: 10px;
-    opacity: 0;
-    animation: FadeIn 1.5s ease-out forwards;
+    padding: 10px 0;
 
-    .story-name {
-      cursor: pointer;
-      font-size: 0.9em;
-      margin-top: 8px;
-      color: #313131;
-    }
+    .story {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+      padding: 10px;
+      opacity: 0;
+      animation: FadeIn 1.5s ease-out forwards;
 
-    .story-picture {
-      z-index: 1;
-      margin: 4px;
-      cursor: pointer;
-      background-color: #f5f5f5;
-      border-radius: 50%;
-    }
+      .story-name {
+        cursor: pointer;
+        font-size: 0.9em;
+        margin-top: 8px;
+        color: #313131;
+      }
 
-    .story-picture-border {
-      z-index: 0;
-      position: absolute;
-      width: 75px;
-      height: 75px;
-      background: linear-gradient(120deg, #f5f7fa, #fff3e5) padding-box,
-      linear-gradient(to right, #ffe1c9, #cebbad) border-box;
-      border-radius: 50%;
-      border: 2.5px solid transparent;
-      top: 39px;
+      .story-picture {
+        z-index: 1;
+        margin: 4px;
+        cursor: pointer;
+        background-color: #f5f5f5;
+        border-radius: 50%;
+      }
+
+      .story-picture-border {
+        z-index: 0;
+        position: absolute;
+        width: 75px;
+        height: 75px;
+        background: linear-gradient(120deg, #f5f7fa, #fff3e5) padding-box,
+        linear-gradient(to right, #ffe1c9, #cebbad) border-box;
+        border-radius: 50%;
+        border: 2.5px solid transparent;
+        top: 39px;
+      }
     }
+  }
+}
+
+@media (max-width: 500px) {
+  .story:last-child{
+    display: none !important;
   }
 }
