Create Routing with homepage and add 2 other projets

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,42 @@
-<p>home works!</p>
+<h1>Karim CHARLEUX</h1>
+<h3>Portfolio</h3>
+
+<div class="project-container">
+
+  <a class="project" routerLink="/instarand">
+    <h2 class="project-title">InstaRand</h2>
+    <p class="project-description">
+      InstaRand is a social network that allows you to discover the beauty in the randomness.
+    </p>
+    <div class="project-tags">
+      <span class="tag">Angular</span>
+      <span class="tag">Firebase</span>
+      <span class="tag">SCSS</span>
+      <span class="tag">TypeScript</span>
+    </div>
+  </a>
+
+  <a class="project" routerLink="/le-monde-du-vtt">
+    <h2 class="project-title">Le Monde du VTT</h2>
+    <p class="project-description">
+      Le Monde du VTT is a website that allows you to discover the world of mountain biking.
+    </p>
+    <div class="project-tags">
+      <span class="tag">HTML</span>
+      <span class="tag">CSS</span>
+      <span class="tag">JS</span>
+    </div>
+  </a>
+  <a class="project" routerLink="/snchess">
+    <h2 class="project-title">SNCHESS</h2>
+    <p class="project-description">
+      SNCHESS is a tran allows you to book train tickets, with the SNCF API.
+    </p>
+    <div class="project-tags">
+      <span class="tag">HTML</span>
+      <span class="tag">CSS</span>
+      <span class="tag">JS</span>
+    </div>
+  </a>
+</div>
+
