--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,12 +5,12 @@
 
   <a class="project" routerLink="/instarand">
     <h2 class="project-title">InstaRand</h2>
+    <img alt="InstaRand" class="project-image" height="887" ngSrc="../assets/resume-instarand.jpg" width="1895">
     <p class="project-description">
       InstaRand is a social network that allows you to discover the beauty in the randomness.
     </p>
     <div class="project-tags">
       <span class="tag">Angular</span>
-      <span class="tag">Firebase</span>
       <span class="tag">SCSS</span>
       <span class="tag">TypeScript</span>
     </div>
@@ -18,6 +18,7 @@
 
   <a class="project" routerLink="/le-monde-du-vtt">
     <h2 class="project-title">Le Monde du VTT</h2>
+    <img alt="Le Monde du VTT" class="project-image" height="883" ngSrc="../assets/resume-vtt.jpg" width="1896">
     <p class="project-description">
       Le Monde du VTT is a website that allows you to discover the world of mountain biking.
     </p>
@@ -29,8 +30,9 @@
   </a>
   <a class="project" routerLink="/snchess">
     <h2 class="project-title">SNCHESS</h2>
+    <img alt="SNCHESS" class="project-image" height="887" ngSrc="../assets/resume-snchess.jpg" width="1892">
     <p class="project-description">
-      SNCHESS is a tran allows you to book train tickets, with the SNCF API.
+      SNCHESS allows you to book train tickets, with the SNCF API. With Maps, you can also find the nearest station.
     </p>
     <div class="project-tags">
       <span class="tag">HTML</span>
@@ -39,4 +41,3 @@
     </div>
   </a>
 </div>
-
