--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,9 @@
 @import "../../scss/_variables";
 @import "../../scss/_utils";
 
+
 h1 {
+  cursor: default;
   font-size: 2rem;
   width: 100%;
   text-align: center;
@@ -11,6 +13,7 @@ h1 {
 }
 
 h3 {
+  cursor: default;
   font-family: 'Poppins', sans-serif;
   font-size: 1.5rem;
   width: 100%;
@@ -34,8 +37,8 @@ h3 {
     margin: 1rem 0;
     padding: 1.5rem;
     border-radius: $border-radius;
-    background: linear-gradient(45deg, #f5f7fa, #ffe9d6);
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.09);
+    background: linear-gradient(45deg, #ffffff, #ffe9d6);
+    box-shadow: 0 0 10px 0 rgb(224, 224, 224);
     transition: all 0.3s ease-in-out;
     cursor: pointer;
     opacity: 0;
@@ -45,15 +48,22 @@ h3 {
 
     &:hover {
       scale: 1.05;
+      box-shadow: 0 0 20px 0 rgba(224, 224, 224, 0.68);
 
       .project-title {
         scale: 1.05;
         transform: rotate(1deg);
       }
 
+      .project-image {
+        scale: 1.1;
+        transform: rotate(0.5deg);
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
+      }
+
       .project-description {
         scale: 1.03;
-        transform: rotate(-1deg);
+        transform: rotate(-0.5deg);
       }
     }
 
@@ -66,6 +76,15 @@ h3 {
       font-weight: bold;
       margin: 0 0 0.5rem 0;
       transition: all 0.3s ease-in-out;
+    }
+
+    .project-image {
+      width: 100%;
+      height: auto;
+      border-radius: $border-radius/2;
+      margin: 0 0 1rem 0;
+      transition: all 0.3s ease-in-out;
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.16);
     }
 
     .project-description {
@@ -82,7 +101,7 @@ h3 {
       .tag {
         margin: 0 0.5rem 0.5rem 0;
         padding: 0.2rem 0.5rem;
-        border: 1px solid $border-color;
+        border: 1px solid #e5e5e5;
         border-radius: $border-radius;
         background-color: $background-color;
         font-size: 0.8rem;
