--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,9 @@
-<h1>Karim CHARLEUX</h1>
-<h3>Portfolio</h3>
+<div class="header">
+  <img alt="Karim CHARLEUX" class="header-logo" height="926" src="../assets/karim-picture.jpeg" width="926">
+  <h1>Karim CHARLEUX</h1>
+  <h3>Portfolio</h3>
+</div>
+
 
 <div class="project-container">
 
