--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,26 +1,38 @@
 @import "../../scss/_variables";
 @import "../../scss/_utils";
 
-
-h1 {
-  cursor: default;
-  font-size: 2rem;
-  width: 100%;
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-  margin-bottom: 0;
+.header {
   animation: ZoomIn 3s ease-in-out;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 10px;
 
-h3 {
-  cursor: default;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.5rem;
-  width: 100%;
-  text-align: center;
-  font-weight: 100;
-  margin-top: 0;
-  animation: ZoomIn 3s ease-in-out;
+
+  h1 {
+    cursor: default;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+    margin: 5px 0 0 0;
+  }
+
+  h3 {
+    cursor: default;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 100;
+    margin: 0;
+  }
+
+  .header-logo {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .project-container {
