--- a/src/app/projet/le-monde-du-vtt/le-monde-du-vtt.component.html
+++ b/src/app/projet/le-monde-du-vtt/le-monde-du-vtt.component.html
@@ -1,6 +1,6 @@
 <main>
   <app-vtt-header></app-vtt-header>
-  <app-vtt-home></app-vtt-home>
+  <router-outlet></router-outlet>
   <app-vtt-footer></app-vtt-footer>
 </main>
 
