--- a/src/app/projet/le-monde-du-vtt/vtt-home/vtt-home.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-home/vtt-home.component.html
@@ -4,7 +4,6 @@
   </div>
 </div>
 
-
 <section class="section1">
   <p>
     <strong>Envie de chevauchées au grand air dans la nature ?</strong> <br><br>
@@ -17,8 +16,8 @@
 </section>
 
 <div class="conteneur_image_vtt">
-  <img alt="" class="image_vtt" src="assets/VTT/back.jpg">
-  <span id="xc_text"><a href="xc.html">VTT Cross-Country</a></span>
-  <span id="dh_text"><a href="dh.html">VTT Descente</a></span>
-  <span id="trial_text"><a href="trial.html">VTT Trial</a></span>
+  <img alt="Les catégories du VTT" class="image_vtt" height="1080" ngSrc="assets/VTT/back.jpg" width="1920">
+  <span id="xc_text"><a routerLink="xc">VTT Cross-Country</a></span>
+  <span id="dh_text"><a routerLink="dh">VTT Descente</a></span>
+  <span id="trial_text"><a routerLink="trial">VTT Trial</a></span>
 </div>
