--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
 @import "../../scss/_utils";
 
 .header {
-  animation: ZoomIn 3s ease-in-out;
+  animation: ZoomInBlur 3s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,13 +13,13 @@
   h1 {
     cursor: default;
     font-size: 2rem;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     margin: 5px 0 0 0;
   }
 
   h3 {
     cursor: default;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.5rem;
     font-weight: 100;
     margin: 0;
@@ -36,7 +36,7 @@
 }
 
 .project-container {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -93,7 +93,7 @@
     .project-image {
       width: 100%;
       height: auto;
-      border-radius: $border-radius/2;
+      border-radius: calc($border-radius / 2);
       margin: 0 0 1rem 0;
       transition: all 0.3s ease-in-out;
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.16);
