--- a/src/app/projet/le-monde-du-vtt/le-monde-du-vtt.component.scss
+++ b/src/app/projet/le-monde-du-vtt/le-monde-du-vtt.component.scss
@@ -1,10 +1,5 @@
-@font-face {
-  font-family: "texte";
-  src: url('../../../font/RobotoCondensed-Regular.ttf');
-}
-
 main{
-  font-family: "texte", 'Roboto', arial;
+  font-family: 'Roboto Condensed', 'Roboto', arial;
   margin: 0;
   color: white;
   background: linear-gradient(to bottom,rgb(224, 224, 224),rgb(121, 121, 121));
