--- a/src/app/projet/le-monde-du-vtt/vtt-contact/vtt-contact.component.scss
+++ b/src/app/projet/le-monde-du-vtt/vtt-contact/vtt-contact.component.scss
@@ -1,16 +1,5 @@
-/* =============== CSS Commun ================= */
-@font-face {
-  font-family: "titre";
-  src: url('../../../../font/ProcrastinatingPixie.ttf');
-}
-
-@font-face {
-  font-family: "texte";
-  src: url('../../../../font/RobotoCondensed-Regular.ttf');
-}
-
 main{
-  font-family: "texte", 'Roboto', arial;
+  font-family: 'Roboto Condensed', 'Roboto', arial;
   margin: 0;
   color: white;
   background: linear-gradient(to bottom,rgb(224, 224, 224),rgb(121, 121, 121));
@@ -32,7 +21,7 @@ header{
 h1{
   font-size: 2.4em;
   color: rgb(107, 107, 107);
-  font-family: titre;
+  font-family: 'Procrastinating Pixie', serif;
   text-align: center;
   padding-top: 3%;
   margin: 0%;
@@ -124,7 +113,7 @@ table{
   #contenu{
     font-size: 1.5em;
   }
-  #en-tete{
+  #header-container{
     height: 80px;
   }
   .contact{
@@ -140,7 +129,7 @@ table{
     height: 90%;
     width: 90%;
   }
-  #en-tete{
+  #header-container{
     flex-direction: column;
     height: 100px;
   }
