--- a/src/app/projet/le-monde-du-vtt/vtt-home/vtt-home.component.scss
+++ b/src/app/projet/le-monde-du-vtt/vtt-home/vtt-home.component.scss
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: "texte";
-  src: url('../../../../font/RobotoCondensed-Regular.ttf');
-}
-
 .header {
   background: right / cover url(../../../../assets/VTT/header.jpg) no-repeat;
   height: 700px;
@@ -54,6 +49,7 @@
 .image_vtt {
   display: block;
   width: 100%;
+  height: auto;
 }
 
 
