--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -12,15 +12,39 @@
   }
 }
 
-@keyframes SlideToUp {
+@keyframes ZoomIn {
   from {
     opacity: 0;
-    transform: translate3d(0, +100%, 0) scale(0.8);
+    transform: scale(0.8);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0) scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes SlideToUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, +100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes SlideToDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -46,7 +70,7 @@
   }
 }
 
-@keyframes ZoomIn {
+@keyframes ZoomInBlur {
   0% {
     opacity: 0.7;
     filter: blur(5px);
@@ -65,7 +89,7 @@
 
 @keyframes rotateGradient {
   @for $i from 0 through 360 {
-    #{percentage($i/360)} {
+    #{percentage(calc($i / 360))} {
       background: linear-gradient(#{$i}deg, #f5f7fa, #fff4e7);
     }
   }
