Fix responsive header of "Le Monde du VTT"

--- a/src/app/projet/le-monde-du-vtt/vtt-header/vtt-header.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-header/vtt-header.component.html
@@ -7,5 +7,9 @@
     <a (click)="disableMenu()" class="header-link" routerLink="trial" routerLinkActive="active">Trial</a>
     <button (click)="disableMenu()" id="header-link-contact" routerLink="contact">Contact</button>
   </nav>
-  <i (click)="showMenu()" class="bi bi-list" id="header-icon-list"></i>
+  <div (click)="showMenu()" id="header-icon-list">
+    <span class="meat"></span>
+    <span class="meat"></span>
+    <span class="meat"></span>
+  </div>
 </header>
