--- a/src/app/projet/le-monde-du-vtt/vtt-header/vtt-header.component.scss
+++ b/src/app/projet/le-monde-du-vtt/vtt-header/vtt-header.component.scss
@@ -21,6 +21,7 @@ header {
     font-family: 'Procrastinating Pixie', serif;
     text-shadow: black 2px 2px 5px;
     animation: SlideToRight 2s ease-out forwards;
+    z-index: 1001;
   }
 
   nav {
@@ -60,13 +61,41 @@ header {
     }
   }
 
+  // Hamburger Menu Button
   #header-icon-list {
-    margin-right: 20px;
-    font-size: 40px;
-    cursor: pointer;
-    position: absolute;
     display: none;
-    right: 0;
+    position: absolute;
+    right: 2vw;
+    top: 2.5vw;
+    transition-duration: 500ms;
+
+    &.active {
+      transform: translateX(12px);
+    }
+
+    .meat {
+      display: block;
+      height: 1vw;
+      width: 8vw;
+      margin: 1.6vw 0;
+      border-radius: 10px;
+      background-color: #ffffff;
+      transition-duration: 300ms;
+
+      // Bar animations.
+
+      &:nth-child(1).active {
+        transform: rotate(45deg) translateY(3.7vw);
+      }
+
+      &:nth-child(2).active {
+        opacity: 0;
+      }
+
+      &:nth-child(3).active {
+        transform: rotate(-45deg) translateY(-3.8vw)
+      }
+    }
   }
 }
 
@@ -84,27 +113,32 @@ header {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
   header {
     padding: 0;
-  }
 
-  nav {
-    height: 100vh;
-    background: rgb(34, 34, 34);;
-    left: -100%;
-    text-align: center;
-    transition: all 0.5s;
-    flex-direction: column;
-    position: absolute;
-
-    &.show {
-      left: 0 !important;
+    #header-title {
+      padding: 2vw 0;
+      font-size: 9vw !important;
     }
-  }
 
-  #header-icon-list {
-    display: initial !important;
-    position: absolute;
+    nav {
+      height: 100vh;
+      background: rgb(34, 34, 34);;
+      left: -100%;
+      text-align: center;
+      transition: all 0.5s;
+      flex-direction: column;
+      position: absolute;
+      padding-top: 5vw;
+
+      &.show {
+        left: 0 !important;
+      }
+    }
+
+    #header-icon-list {
+      display: initial;
+    }
   }
 }
