--- a/src/app/projet/le-monde-du-vtt/le-monde-du-vtt.component.scss
+++ b/src/app/projet/le-monde-du-vtt/le-monde-du-vtt.component.scss
@@ -1,6 +1,6 @@
-main{
-  font-family: 'Roboto Condensed', 'Roboto', arial;
-  margin: 0;
+main {
+  font-family: 'Roboto Condensed', 'Roboto', arial, serif;
   color: white;
-  background: linear-gradient(to bottom,rgb(224, 224, 224),rgb(121, 121, 121));
+  background: linear-gradient(to bottom, rgb(224, 224, 224), rgb(203, 203, 203));
+  position: relative;
 }
