--- a/src/app/projet/le-monde-du-vtt/vtt-contact/vtt-contact.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-contact/vtt-contact.component.html
@@ -1,11 +1,11 @@
-<div id="background_image">
-  <div id="contenu">
+<div id="contact-background-image">
+  <div id="contact-container">
     <h1>CONTACT</h1>
     <form action="mailto:karim.charleux@hotmail.fr" method="POST">
-      <table>
+      <table aria-label="Formulaire de contact">
         <tr>
-          <td class="TD_Label"><label for="Nom">Nom </label></td>
-          <td class="TD_Label"><label for="Prenom">Prénom </label></td>
+          <td class="contact-label"><label for="Nom">Nom </label></td>
+          <td class="contact-label"><label for="Prenom">Prénom </label></td>
         </tr>
 
         <tr>
@@ -14,8 +14,8 @@
         </tr>
 
         <tr>
-          <td class="TD_Label"><label for="Email">Email</label></td>
-          <td class="TD_Label"><label for="tel">Téléphone</label></td>
+          <td class="contact-label"><label for="Email">Email</label></td>
+          <td class="contact-label"><label for="tel">Téléphone</label></td>
         </tr>
 
         <tr>
@@ -24,15 +24,15 @@
                      type="tel"></td>
         </tr>
         <tr>
-          <td class="TD_Label"><label for="message">Message</label></td>
+          <td class="contact-label"><label for="message">Message</label></td>
         </tr>
         <tr>
-          <td colspan="2"><textarea id="message" placeholder="Saisisser votre message" rows="5"></textarea></td>
+          <td colspan="2"><textarea id="message" placeholder="Saisissez votre message" rows="5"></textarea></td>
         </tr>
       </table>
-      <div class="bouton_conteneur">
-        <input class="bouton" type="submit" value="Envoyer">
-        <input class="bouton" type="reset" value="Annuler">
+      <div class="contact-btn-container">
+        <input class="contact-btn" type="submit" value="Envoyer">
+        <input class="contact-btn" type="reset" value="Annuler">
       </div>
     </form>
   </div>
