--- a/src/app/projet/le-monde-du-vtt/vtt-dh/vtt-dh.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-dh/vtt-dh.component.html
@@ -1,36 +1,38 @@
-<img id="image_fond" src="assets/VTT/header_dh.jpg">
+<img alt="DH" height="853" id="dh-background-image" ngSrc="assets/VTT/header_dh.jpg" width="1280">
 
-<h1>VTT Descente</h1>
-<section>
-  <article>
+<h1 id="dh-title">VTT Descente</h1>
+
+<section id="dh-page">
+  <div id="dh-container-text">
     <p>
-      <strong>VTT de descente :</strong>  Le VTT de descente appelé aussi DH est un sport extrême, très engagé ou
-      le but est de descendre le plus rapidement possible un parcours en descente. Les parcours
-      dans cette disciplines sont souvent composés de passages très raides avec des grosses racines
-      en milieu bosser et des grosses pierres.<br> Pour pouvoir encaisser ces nombreux choquent tout
-      en allant vite, les vtt sont conçus d’une certaines manières permettant aux pilotes d’être
-      le plus efficace possible.
+      <strong>VTT de descente :</strong> Le VTT de descente appelé aussi DH est un sport extrême, très engagé ou le but
+      est de descendre le plus rapidement possible un parcours en descente. Les parcours dans ces disciplines sont
+      souvent composés de passages très raides avec des grosses racines en milieu bossé et des grosses pierres.<br> Pour
+      pouvoir encaisser ces nombreux choquent tout en allant vite, les VTT sont conçus d’une certaine manière permettant
+      aux pilotes d’être le plus efficace possible.
     </p>
     <video controls>
       <source src="assets/VTT/video_dh.mp4" type="video/mp4">
-    </video><br>
+    </video>
     <p>
-      Le caractéristique propre au DH sont tout d’abord le centre de gravité du vététiste sur
-      le VTT car il est assez bas pour permettre au pilote d'adhérer au mieux la piste.
-      Ensuite ce type de vélo possède deux suspension avec une fourche à l’avant et un amortisseur
-      à l'arrière et la grosse différence entre ce vtt et les autres est la dimension de
-      la fourche ( la parti qui se compressent) car elle peut atteindre 240 mm voir 260mm
-      contrairement au cross country qui est la plupart du temps a 100 ou 110mm. Cela permet
-      au Vététiste lors d’une descente de moins ressentir les choquent car les suspensions étant
-      plus grandes permettent d’absorber les chocs.
+      La caractéristique propre au DH sont tout d’abord le centre de gravité du vététiste sur le VTT, car il est assez
+      bas pour permettre au pilote d'adhérer au mieux la piste.
+      Ensuite, ce type de vélo possède deux suspensions avec une fourche à l’avant et un amortisseur à l'arrière et la
+      grosse différence entre ce VTT et les autres est la dimension de la fourche (la partie qui se compressent) car
+      elle peut atteindre 240 mm voir 260 mm contrairement au cross country qui est la plupart du temps à 100 ou 110 mm.
+      Cela permet au Vététiste lors d’une descente de moins ressentir les choquent, car les suspensions étant plus
+      grandes permettent d’absorber les chocs.
     </p>
-    <img id="img_canyon" src="assets/VTT/canyon_dh.png"><br>
+    <img alt="Canyon" height="512" id="img-canyon" ngSrc="assets/VTT/canyon_dh.png" width="830">
     <p>
       Au niveau professionnel, les francais sont tres présent.
       En effet dans la catégorie masculine, deux français font partis des plus fort.<br>
-      <a href="https://fr.wikipedia.org/wiki/Amaury_Pierron" target="_blank"><img class="image_champion" src="assets/VTT/amaury_pierron.png"></a>
-      <a href="https://fr.wikipedia.org/wiki/Lo%C3%AFc_Bruni" target="_blank"><img class="image_champion" src="assets/VTT/loic_bruny.png"></a>
     </p>
-
-  </article>
+    <a href="https://fr.wikipedia.org/wiki/Amaury_Pierron" target="_blank">
+      <img alt="Amaury P." class="dh-champion-image" height="500" ngSrc="assets/VTT/amaury_pierron.png" width="1500">
+    </a>
+    <a href="https://fr.wikipedia.org/wiki/Lo%C3%AFc_Bruni" target="_blank">
+      <img alt="Loic B." class="dh-champion-image" height="500" ngSrc="assets/VTT/loic_bruny.png" width="1500">
+    </a>
+  </div>
 </section>
