--- a/src/app/projet/le-monde-du-vtt/vtt-header/vtt-header.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-header/vtt-header.component.html
@@ -5,7 +5,7 @@
     <a (click)="disableMenu()" class="header-link" routerLink="xc" routerLinkActive="active">Cross Country</a>
     <a (click)="disableMenu()" class="header-link" routerLink="dh" routerLinkActive="active">Downhill</a>
     <a (click)="disableMenu()" class="header-link" routerLink="trial" routerLinkActive="active">Trial</a>
-    <button (click)="disableMenu()" id="header-link-contact" routerLink="contact">Contact</button>
+    <button (click)="disableMenu()" id="header-btn-contact" routerLink="contact">Contact</button>
   </nav>
   <div (click)="showMenu()" id="header-icon-list">
     <span class="meat"></span>
