--- a/src/app/projet/le-monde-du-vtt/vtt-home/vtt-home.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-home/vtt-home.component.html
@@ -1,23 +1,25 @@
-<div class="header">
-  <div id="bonjour">
+<div id="home-background">
+  <div id="home-subtitle">
     <p>Bienvenue sur notre site !</p>
   </div>
 </div>
 
-<section class="section1">
+<section id="home-section-text">
   <p>
-    <strong>Envie de chevauchées au grand air dans la nature ?</strong> <br><br>
-    Le VTT est fait pour vous ! Oui mais quel VTTiste êtes-vous ?
-    Il n’y a pas un mais des façons de pratiquer le VTT, toutes spécifiques, toutes possédant son type adapté de vélo.
-    <br><br>
-    <strong>Le VTT qu'est-ce que c'est ?</strong><br>
-    Le VTT est une discipline sportive qui regroupe plusieurs pratiques disctinctes.<br>
+    <strong>Envie de chevaucher au grand air dans la nature ?</strong>
+    Le VTT est fait pour vous ! Oui mais, quel VTTiste êtes-vous ? Il n’y a pas un, mais des façons de pratiquer le VTT,
+    toutes spécifiques, toutes possédant son type adapté de vélo.
+  </p>
+
+  <p>
+    <strong>Le VTT qu'est-ce que c'est ?</strong>
+    Le VTT est une discipline sportive qui regroupe plusieurs pratiques distinctes.
   </p>
 </section>
 
-<div class="conteneur_image_vtt">
-  <img alt="Les catégories du VTT" class="image_vtt" height="1080" ngSrc="assets/VTT/back.jpg" width="1920">
-  <span id="xc_text"><a routerLink="xc">VTT Cross-Country</a></span>
-  <span id="dh_text"><a routerLink="dh">VTT Descente</a></span>
-  <span id="trial_text"><a routerLink="trial">VTT Trial</a></span>
+<div id="home-vtt-image-container">
+  <img alt="Les catégories du VTT" class="home-image-vtt" height="1080" ngSrc="assets/VTT/back.jpg" width="1920">
+  <span class="home-vtt-text"><a routerLink="xc">VTT Cross-Country</a></span>
+  <span class="home-vtt-text"><a routerLink="dh">VTT Descente</a></span>
+  <span class="home-vtt-text"><a routerLink="trial">VTT Trial</a></span>
 </div>
