--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -94,3 +94,24 @@
     }
   }
 }
+
+@keyframes slideStepSmooth {
+  0% {
+    transform: translateX(0%);
+  }
+  20% {
+    transform: translateX(0%);
+  }
+  40% {
+    transform: translateX(-20%);
+  }
+  60% {
+    transform: translateX(-40%);
+  }
+  80% {
+    transform: translateX(-60%);
+  }
+  100% {
+    transform: translateX(-80%);
+  }
+}
