--- a/src/app/projet/le-monde-du-vtt/vtt-contact/vtt-contact.component.scss
+++ b/src/app/projet/le-monde-du-vtt/vtt-contact/vtt-contact.component.scss
@@ -1,11 +1,7 @@
-main{
-  font-family: 'Roboto Condensed', 'Roboto', arial;
-  margin: 0;
-  color: white;
-  background: linear-gradient(to bottom,rgb(224, 224, 224),rgb(121, 121, 121));
-}
+@import "../../../../scss/utils";
+@import "../../../../scss/variables";
 
-#background_image{
+#contact-background-image {
   background: right / cover url(../../../../assets/VTT/header.jpg) no-repeat;
   backdrop-filter: blur(3px);
   width: 100%;
@@ -14,132 +10,105 @@ main{
   padding-top: 5%;
 }
 
-header{
-  height: 150px;
-}
-
-h1{
-  font-size: 2.4em;
-  color: rgb(107, 107, 107);
-  font-family: 'Procrastinating Pixie', serif;
-  text-align: center;
-  padding-top: 3%;
-  margin: 0%;
-}
-
-#contenu{
+#contact-container {
   font-size: 1.7em;
-  font-family: Roboto,Arial, Helvetica, sans-serif;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
   margin: auto;
   width: 45%;
-  box-shadow: rgb(46, 46, 46) 0px 0px 11px;
+  box-shadow: rgb(46, 46, 46) 0 0 11px;
   background-color: white;
   border-radius: 5px;
-  animation: slideDown 1s;
-}
+  animation: SlideToRight 1s;
 
-.bouton{
-  padding: 4%;
-  background: rgb(107, 107, 107);
-  color: white;
-  font-weight: bold;
-  transition: all 0.4s;
-  margin: 3%;
-  font-size: 0.6em;
-  width: auto;
-  justify-content: space-around;
-}
-
-.bouton_conteneur{
-  display: flex;
-  justify-content: center;
-}
-
-.bouton:hover{
-  opacity: 0.7;
-}
-
-input,select,textarea{
-  border-radius: 3px;
-  background-color:#EBEBEB;
-  border: 0px;
-  padding: 4%;
-  margin-top: 2%;
-  font-size: 0.6em;
-  width: 100%;
-}
-
-.TD_Label{
-  color: black;
-  padding-top: 4%;
-}
-
-table{
-  margin:auto;
-  border-spacing: 70px 0px;
-}
-
-/* ========== Les Animations ========== */
-@keyframes slideDown{
-  from {
-    transform: translateX( 200px);
-    opacity: 0;
-  }
-  to{
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideUp {
-  from {
-    transform: translateY(-200px);
-    opacity: 0;
+  h1 {
+    font-size: 2.4em;
+    color: rgb(107, 107, 107);
+    font-family: 'Procrastinating Pixie', serif;
+    text-align: center;
+    padding-top: 3%;
   }
 
-  to {
-    transform: translateY(0);
-    opacity: 1;
+  table {
+    margin: auto;
+    border-spacing: 70px 0;
+
+    input, select, textarea {
+      border-radius: 3px;
+      background-color: #EBEBEB;
+      border: 0;
+      padding: 4%;
+      margin-top: 2%;
+      font-size: 0.6em;
+      width: 100%;
+    }
+
+    .contact-label {
+      color: black;
+      padding-top: 4%;
+    }
+  }
+
+
+  .contact-btn-container {
+    display: flex;
+    justify-content: center;
+
+    .contact-btn {
+      cursor: pointer;
+      border-radius: 10px;
+      padding: 2% 4%;
+      background: rgb(107, 107, 107);
+      color: white;
+      font-weight: bold;
+      border: 0;
+      transition: all 0.4s;
+      margin: 3%;
+      font-size: 0.6em;
+      width: auto;
+      justify-content: space-around;
+
+      &:hover {
+        opacity: 0.7;
+      }
+    }
   }
 }
+
 /* ================================== */
 
 
-@media screen and (max-width: 1280px){
-  #contenu{
+@media screen and (max-width: 1280px) {
+  #contact-container {
     height: 70%;
     width: 70%;
-  }
-  #contenu{
     font-size: 1.5em;
   }
-  #header-container{
-    height: 80px;
+
+  .contact {
+    margin-left: 0;
   }
-  .contact{
-    margin-left: 0%;
-  }
-  h1{
+
+  h1 {
     margin-top: 50px;
   }
 }
 
-@media screen and (max-width: 780px){
-  #contenu{
+@media screen and (max-width: 780px) {
+  #contact-container {
     height: 90%;
     width: 90%;
   }
-  #header-container{
+  #header-container {
     flex-direction: column;
     height: 100px;
   }
-  nav{
+  nav {
     justify-content: space-around;
   }
-  .contact{
-    margin-left: 0%;
+  .contact {
+    margin-left: 0;
   }
-  h1{
+  h1 {
     margin-top: 70px;
   }
 
