--- a/src/app/projet/le-monde-du-vtt/vtt-footer/vtt-footer.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-footer/vtt-footer.component.html
@@ -1,22 +1,22 @@
 <footer>
-  <div class="bloc_footer_titre">
-    <h3 class="titre">LE MONDE DU VTT</h3>
+  <div class="footer-container-title">
+    <h3 class="footer-title-text">LE MONDE DU VTT</h3>
     <p>Crée par Karim CHARLEUX & Clément DEHOSSE</p>
     <p>Valence - France ©2020</p>
   </div>
-  <div class="bloc_footer">
+  <div class="footer-container-links">
     <h3>Liens rapide</h3>
-    <ul class="liste_rapide">
-      <li><a href="main.html">Accueil</a></li>
-      <li><a href="xc.html">VTT Cross Country</a></li>
-      <li><a href="dh.html">VTT de descente</a></li>
-      <li> <a href="trial.html">VTT Trial</a></li>
+    <ul class="footer-links">
+      <li><a routerLink=".">Accueil</a></li>
+      <li><a routerLink="xc">VTT Cross Country</a></li>
+      <li><a routerLink="dh">VTT de descente</a></li>
+      <li><a routerLink="trial">VTT Trial</a></li>
     </ul>
   </div>
-  <div class="bloc_footer">
+  <div class="footer-container-links">
     <h3>Contact</h3>
     <a href="mailto:Karim.Charleux@etu.univ-grenoble-alpes.fr">Karim CHARLEUX</a><br>
     <a href="mailto:Clement.Dehosse@etu.univ-grenoble-alpes.fr">Clément DEHOSSE</a><br><br>
-    <a href="contact.html"><input type="button" value="Contact"></a>
+    <button id="header-btn-contact" routerLink="contact">Contact</button>
   </div>
 </footer>
