--- a/src/app/projet/le-monde-du-vtt/vtt-footer/vtt-footer.component.scss
+++ b/src/app/projet/le-monde-du-vtt/vtt-footer/vtt-footer.component.scss
@@ -1,9 +1,11 @@
 footer {
-  margin: 0%;
-  padding: 4% 0 0 0;
+  margin: 0;
+  padding-top: 2%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   background-color: rgb(34, 34, 34);
+  color: white;
 
   a {
     color: white;
@@ -13,27 +15,51 @@ footer {
       color: white;
     }
   }
-}
 
-.titre {
-  font-family: 'Procrastinating Pixie', serif;
-}
+  .footer-container-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 
-.bloc_footer_titre {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+    .footer-title-text {
+      font-family: 'Procrastinating Pixie', serif;
+    }
+  }
 
-.bloc_footer {
-  text-align: center;
-}
+  .footer-container-links {
+    text-align: center;
 
-.liste_rapide {
-  padding: 0;
-  list-style: none;
-}
+    .footer-links {
+      padding: 0;
+      list-style: none;
 
-.liste_rapide li:hover {
-  opacity: 0.8;
+      li:hover {
+        opacity: 0.8;
+      }
+    }
+
+    #header-btn-contact {
+      cursor: pointer;
+      color: rgb(34, 34, 34);
+      padding: 7px 17px;
+      border-radius: 10px;
+      border: 0;
+      font-size: 20px;
+      background-color: rgba(255, 255, 255, 0.856);
+      transition: all 0.5s;
+      margin: 5px;
+      font-weight: bold;
+      font-family: "Roboto Condensed", "Roboto", serif;
+
+      &:hover {
+        background-color: #ffffff;
+        scale: 1.02;
+      }
+
+      &:active {
+        scale: 0.98;
+      }
+    }
+  }
 }
