--- a/src/app/projet/le-monde-du-vtt/vtt-trial/vtt-trial.component.html
+++ b/src/app/projet/le-monde-du-vtt/vtt-trial/vtt-trial.component.html
@@ -1,33 +1,44 @@
-<img id="image_fond" src="assets/VTT/header_trial.jpg">
-<h1>VTT Trial</h1>
-<section>
-  <article>
+<img alt="VTT Trial" height="1350" id="trial-background-image" ngSrc="assets/VTT/header_trial.jpg" width="2400">
+
+<h1 id="trial-title">VTT Trial</h1>
+
+<section id="trial-page">
+  <div id="trial-container-text">
     <p>
       <strong>VTT trial :</strong>
-      Le vélo trial est un sport de franchissement d’obstacles en milieu naturel ou artificiel sur un vélo.<br>
-      En compétition, le but est de parcourir different parcours ou il y a de nombreux obstacles en mettant le moins
-      souvent le pieds à terre et ceci dans un temps limité.
-      En fonction du nombre de fautes (pieds à terre) et du temps le gagnant est désigné.<br><br>
-      Les particularités de ce vélo sont tout d’abord qu’il n’a pas de selle car le vététiste est tout le temps debout
-      sur son vélo pour être plus alaise.
-      Ensuite il y a la géométrie du vélo car elle est assez petite et la position sur le vélo est fort en avant.<br>
-      En effet pour franchir des obstacles (rondin de bois, rocher, etc) cette position sur le vélo permet de pouvoir
-      s’engager sur les obstacles avec une une
-      meilleure impulsions pour les franchir.<br>
-      De plus ces vélos ont une fourche rigide contrairement à la plupart des VTT car leur fourche permet d’absorber les
-      chocs hors dans ce sport si ces vélos
-      étaient équipés d’une fourche avec suspension, cela amortirait l’impulsion du vététiste et cela diminuerai par
-      exemple lors d’un saut sa longueur.
+      Le vélo trial est un sport de franchissement d’obstacles en milieu naturel ou artificiel sur un vélo.
     </p>
 
-    <img id="trial_img" src="assets/VTT/trial_img.jpg">
     <p>
-      En France, ce sport n’est pas très connu car il n’est pas très médiatisé comparé au cross country ou le vtt
-      descente ou il y a plus de spectacle.
-      Malgré ça certaines personnes arrivent à faire découvrir de plus en plus ce sport comme le youtubeur aurélien
-      fontenoy qui est un professionnel dans ce domaine.
+      En compétition, le but est de parcourir différent parcours où il y a de nombreux obstacles en mettant le moins
+      souvent le pied à terre et ceci dans un temps limité.
+      En fonction du nombre de fautes (pieds à terre) et du temps, le gagnant est désigné.<br><br>
+      Les particularités de ce vélo sont tout d’abord qu’il n’a pas de selle, car le vététiste est tout le temps debout
+      sur son vélo pour être plus alaise.
+      Ensuite, il y a la géométrie du vélo parce qu'elle est assez petite et la position sur le vélo est fort en
+      avant.
     </p>
-    <a href="https://fr.wikipedia.org/wiki/Aur%C3%A9lien_Fontenoy" target="_blank"><img class="image_champion"
-                                                                                        src="assets/VTT/aurelien.png"></a>
-  </article>
+
+    <p>
+      En effet, pour franchir des obstacles (rondin de bois, rocher, etc) cette position sur le vélo permet de pouvoir
+      s’engager sur les obstacles avec une meilleure impulsion pour les franchir.<br>
+      De plus, ces vélos ont une fourche rigide contrairement à la plupart des VTT, car leur fourche permet d’absorber
+      les chocs hors dans ce sport, si ces vélos étaient équipés d’une fourche avec suspension, cela amortirait
+      l’impulsion du vététiste et cela diminuerait par exemple lors d’un saut sa longueur.
+    </p>
+
+    <img alt="VTT Trial" height="301" id="trial-bike-image" ngSrc="assets/VTT/trial_img.jpg" width="283">
+
+    <p>
+      En France, ce sport n’est pas très connu, car il n’est pas très médiatisé comparé au cross country ou le VTT
+      descente où il y a plus de spectacle.
+      Malgré ça, certaines personnes arrivent à faire découvrir de plus en plus ce sport comme le youtubeur Aurélien
+      Fontenoy qui est un professionnel dans ce domaine.
+    </p>
+
+    <a href="https://fr.wikipedia.org/wiki/Aur%C3%A9lien_Fontenoy" target="_blank">
+      <img alt="Aurélien F." class="trial-champion-image" height="500" ngSrc="assets/VTT/aurelien.png" width="1500">
+    </a>
+
+  </div>
 </section>
