Add TreeJS on the projet and create a 3D scene

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <img alt="Karim CHARLEUX" class="header-logo" height="926" src="../assets/karim-picture.jpeg" width="926">
+  <img alt="Karim CHARLEUX" class="header-logo" height="926" ngSrc="../assets/karim-picture.jpeg" width="926">
   <h1>Karim CHARLEUX</h1>
   <h3>Portfolio</h3>
 </div>
@@ -32,6 +32,7 @@
       <span class="tag">JS</span>
     </div>
   </a>
+
   <a class="project" routerLink="/snchess">
     <h2 class="project-title">SNCHESS</h2>
     <img alt="SNCHESS" class="project-image" height="887" ngSrc="../assets/resume-snchess.jpg" width="1892">
@@ -44,4 +45,16 @@
       <span class="tag">JS</span>
     </div>
   </a>
+
+  <a class="project" routerLink="/treejs">
+    <h2 class="project-title">TreeJS</h2>
+    <img alt="InstaRand" class="project-image" height="887" ngSrc="../assets/resume-instarand.jpg" width="1895">
+    <p class="project-description">
+      TreeJS is a library that allows you to create 3D scene
+    </p>
+    <div class="project-tags">
+      <span class="tag">TreeJS</span>
+    </div>
+  </a>
+
 </div>
